--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -35,7 +35,7 @@
 				<div class="form-group" x-show-errors>
 					<label class="control-label" for="name">Project Name<em class="required">(Required)</em></label>
 					<input class="form-control" title="Project Name" id="name" name="projectname"
-						ng-model="project.name" required />
+						ng-model="project.name" ng-change="onChangeProjectName()" required />
 				</div>
 				<div class="row">
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
