ESM-495: only hide Internal Documents section to public (not logged in users).

--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -27,7 +27,7 @@
     <section>
         <div x-content-document ng-model="artifact.additionalDocuments" title="'Additional Documents'" project="project" artifact="artifact" doc-location-code="additional" editable="mode === 'edit'"></div>
     </section>
-    <section hidden>
+    <section ng-hide="!authentication.user && !authentication.user._id">
         <div x-content-document ng-model="artifact.internalDocuments" title="'Internal Documents'" project="project" artifact="artifact" doc-location-code="internal" editable="mode === 'edit'"></div>
     </section>
     <!-- / SUPPORTING, ADDITIONAL, INTERNAL DOCUMENTS -->
@@ -53,7 +53,7 @@
     </section>
     <section x-content-document ng-model="artifact.supportingDocuments" title="'Supporting Documents'" project="project" artifact="artifact" doc-location-code="supporting" editable="mode === 'edit'"></section>
     <section x-content-document ng-model="artifact.additionalDocuments" title="'Additional Documents'" project="project" artifact="artifact" doc-location-code="additional" editable="mode === 'edit'"></section>
-    <section x-content-document ng-model="artifact.internalDocuments" title="'Internal Documents'" project="project" artifact="artifact" doc-location-code="internal" editable="mode === 'edit'"></section>
+    <section ng-hide="!authentication.user && !authentication.user._id" x-content-document ng-model="artifact.internalDocuments" title="'Internal Documents'" project="project" artifact="artifact" doc-location-code="internal" editable="mode === 'edit'"></section>
 </div>
 
 <!-- Displayed only for artifacts which are a collection of artifacts (VC's) -->
