--- a/modules/core/client/views/role-permissions-modal.html
+++ b/modules/core/client/views/role-permissions-modal.html
@@ -8,10 +8,10 @@
 	<!-- TABS -->
 	<ul class="tab-container nav nav-tabs" role="tablist">
 		<li class="active" role="presentation">
-			<a href ng-click="s.permissionView = !s.permissionView" role="tab" data-toggle="tab">by Permission</a>
+			<a href ng-click="s.permissionView = !s.permissionView" role="tab" data-toggle="tab">By Permission</a>
 		</li>
 		<li role="presentation">
-			<a href ng-click="s.permissionView = !s.permissionView" role="tab" data-toggle="tab">by Role</a>
+			<a href ng-click="s.permissionView = !s.permissionView" role="tab" data-toggle="tab">By Role</a>
 		</li>
 	</ul><!-- / TABS -->
 
