--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -7,7 +7,7 @@
 
 	<!-- TABS -->
 	<ul class="tab-container nav nav-tabs" role="tablist">
-		<li role="presentation" class="active"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By User</a></li>
+		<li role="presentation" class="active"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By Contact</a></li>
 		<li role="presentation"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By Roles</a></li>
 	</ul>
 	<!-- / TABS -->
