--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -144,10 +144,16 @@
 								<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="admin.organization.user.edit({orgId: org._id, userId: o._id})">
 									<span class="glyphicon glyphicon-pencil"></span>
 								</a>
-							</td>			
+							</td>
+							<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+								<a title="Remvoe User from Organization" ng-click="$event.stopPropagation();removeUserFromOrg(o._id)"
+									class="btn btn-link btn-sm">
+									<span class="glyphicon glyphicon-trash"></span>
+								</a>
+							</td>
 						</tr>
 						<tr ng-show="!$data || !$data.length" class="text-center">
-							<td colspan="4">No records found.</td>
+							<td colspan="5">No records found.</td>
 						</tr>
 					</table>
 				</div>
