ESM-571 - 'X' Does not close modal
- Added appropriate ng-click functionality to the close button in the modal header.

--- a/modules/projects/client/views/project-partials/project.schedule.milestone.add.modal.html
+++ b/modules/projects/client/views/project-partials/project.schedule.milestone.add.modal.html
@@ -1,5 +1,6 @@
 <div class="modal-header">
-	<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
+	<button class="btn btn-default close"  type="button"
+		ng-click="cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
 	<h3 class="modal-title">Add Milestone</h3>
