ESM-573 - Contacts to Users
- Naming convention changes as requested.

--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -7,7 +7,7 @@
 
 	<!-- TABS -->
 	<ul class="tab-container nav nav-tabs" role="tablist">
-		<li role="presentation" class="active"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By Contact</a></li>
+		<li role="presentation" class="active"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By User</a></li>
 		<li role="presentation"><a href ng-click="s.userView = !s.userView" role="tab" data-toggle="tab">By Roles</a></li>
 	</ul>
 	<!-- / TABS -->
@@ -15,17 +15,17 @@
 	<!-- SET BY USERS -->
 	<div class="tab-pane" ng-show="s.userView">
 		<div class="form-group select-permission">
-			<label class="control-label">Select Contact</label>
+			<label class="control-label">Select User</label>
 			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="user.displayName for user in s.allUsers | orderBy"></select>
       <button class="btn btn-default btn-sm" type="button"
               x-user-search-chooser
               x-title="'Select Contacts'"
               x-project="s.context"
-              x-destination="contacts"><span class="glyphicon glyphicon-plus"></span><span>Add Contacts</span></button>
+              x-destination="contacts"><span class="glyphicon glyphicon-plus"></span><span>Add User</span></button>
 
     </div>
 		<div class="form-group manage-permission no-margin">
-			<label class="control-label">Manage Roles for Contacts</label>
+			<label class="control-label">Manage Roles for User</label>
 			<tmpl-role-new context="s.context" class="new-role-btn" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
 		<div class="panel panel-default">
@@ -52,7 +52,7 @@
 			<tmpl-role-new context="s.context" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
 		<div class="form-group manage-permission no-margin">
-			<label class="control-label">Manage Contacts for Role</label>
+			<label class="control-label">Manage Users for Role</label>
 			<tmpl-add-user-to-context class="new-role-btn" context="s.context" role="s.defaultRole" ng-if="s.context._id !== 'application'"></tmpl-add-user-to-context>
 		</div>
 		<div class="panel panel-default">
