--- a/modules/artifacts/client/views/artifact-type-chooser.html
+++ b/modules/artifacts/client/views/artifact-type-chooser.html
@@ -1,13 +1,16 @@
 
 <div class="artifact-chooser-view">
-
     <div class="modal-header">
+        <button class="btn btn-default close" type="button"
+            ng-click="chooser.cancel()">
+            <span aria-hidden="true">&times;</span>
+        </button>
         <h3 class="modal-title">Add Content</h3>
     </div>
 
     <div class="modal-body">
         <label>Select one or more Content Type(s)</label>
-        <table ng-table="chooser.tableParams" show-filter="true" class="table table-hover artifact-chooser-table">
+        <table class="table table-hover table-scroll artifact-chooser-table" ng-table="chooser.tableParams" show-filter="true">
             <tr ng-repeat="o in $data">
                 <td class="name-col" data-title="'Name'" filter="{'name':'text'}" sortable="'name'"><input type="checkbox" ng-click="chooser.toggleItem(o)" /> {{o.name}}</td>
                 <td header-class="'phase-col'" data-title="'Phase'" filter="{'phase':'select'}" filter-data="chooser.phaseArray" sortable="'phase'">{{o.phaseName}}</td>
