--- a/modules/utils/client/views/partials/entity-select-modal.html
+++ b/modules/utils/client/views/partials/entity-select-modal.html
@@ -7,7 +7,7 @@
 	<section class="panel panel-default no-margin add-vc-table">
 		<table class="table table-scroll add-valued-component-table" ng-table="tableParams" show-filter="true">
 			<tr ng-repeat="o in $data">
-				<td data-title="'Name'"
+				<td class="select" data-title="'Name'"
 					sortable="'name'"
 					filter="{'name':'text'}"
 					ng-click="toggleItem(o)"><input type="checkbox" ng-checked="index(o) !== -1"/>{{resolve(o, valueString)}}</td>
