--- a/modules/core/client/views/403.client.view.html
+++ b/modules/core/client/views/403.client.view.html
@@ -1,8 +1,10 @@
-<div class="error-view">
-	<div class="view-title-container">
-		<h1>Permission Denied</h1>
-	</div>
-	<div class="view-body-container">
-		<p>You do not have the correct permissions to access this page.</p>
-	</div>
+<div class="main-panel">
+  <div class="view-title-container">
+    <h1>Permission Denied</h1>
+  </div>
+
+  <div class="view-body-container">
+    <p>You do not have the correct permissions to access this page.</p>
+  </div>
+
 </div>
