--- a/modules/email-templates/client/views/email-template-list.html
+++ b/modules/email-templates/client/views/email-template-list.html
@@ -6,7 +6,7 @@
 
 <div class="view-body-container">
 	<div class="button-bar clearfix">
-		<a class="btn btn-default btn-sm" ui-sref="admin.emailtemplate.create()">
+		<a ng-if="application.userCan.createEmailTemplate" class="btn btn-default btn-sm" ui-sref="admin.emailtemplate.create()">
 			<span class="glyphicon glyphicon-plus"></span>
 			<span>Add Email Template</span>
 		</a>
@@ -20,7 +20,7 @@
 				<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
 				<td data-title="'Group'"  filter="{'group':'text'}"   sortable="'group'">{{o.group}}</td>
 				<td class="actions-col action-x2" header-class="'actions-col action-x2'">
-					<a class="btn btn-link btn-sm" ng-click="$event.stopPropagation()" ui-sref="admin.emailtemplate.edit({emailtemplateId:o._id})">
+					<a ng-if="application.userCan.createEmailTemplate" class="btn btn-link btn-sm" ng-click="$event.stopPropagation()" ui-sref="admin.emailtemplate.edit({emailtemplateId:o._id})">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
 				</td>
