--- a/modules/users/client/views/admin/user-list.html
+++ b/modules/users/client/views/admin/user-list.html
@@ -5,7 +5,7 @@
 
 <div class="view-body-container">
 	<div class="button-bar">
-		<a class="btn btn-default btn-sm" ui-sref="admin.user.create()">
+		<a ng-if="application.userCan.createContact" class="btn btn-default btn-sm" ui-sref="admin.user.create()">
 			<span class="glyphicon glyphicon-plus"></span><span>Add New Contact</span>
 		</a>
 		<div class="pull-right">
@@ -17,7 +17,7 @@
 			<section class="panel panel-default">
 				<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 					<tr ng-repeat="o in $data" ui-sref="admin.user.detail({userId:o._id})" class="clickable">
-						<td data-title="'Username'" 
+						<td data-title="'Username'"
 							filter="{'username':'text'}"
 							filter-data="ptypes"
 							sortable="'username'">{{o.username}}</td>
@@ -25,19 +25,19 @@
 							filter="{'displayName':'text'}"
 							filter-data="ptypes"
 							sortable="'displayName'">{{o.displayName}}</td>
-						<td data-title="'Organization'" 
+						<td data-title="'Organization'"
 							filter="{'orgName':'text'}"
 							sortable="'orgName'">{{o.org.name}}</td>
-						<td data-title="'Phone'"   
-							filter="{'phoneNumber':'text'}"  
+						<td data-title="'Phone'"
+							filter="{'phoneNumber':'text'}"
 							sortable="'phoneNumber'">{{o.phoneNumber}}</td>
-						<td data-title="'Email'"  
-							filter="{'email':'text'}" 
+						<td data-title="'Email'"
+							filter="{'email':'text'}"
 							sortable="'email'">{{o.email}}</td>
-						<td class="actions-col action-x1" 
+						<td class="actions-col action-x1"
 							header-class="'actions-col action-x1'">
-							<a class="btn btn-default btn-sm" 
-								ng-click="$event.stopPropagation()" 
+							<a ng-if="application.userCan.createContact" class="btn btn-default btn-sm"
+								ng-click="$event.stopPropagation()"
 								ui-sref="admin.user.edit({userId:o._id})">
 								<span class="glyphicon glyphicon-pencil"></span>
 							</a>
