--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -17,7 +17,7 @@
 		<div class="form-group select-permission">
 			<label class="control-label">Select User</label>
 			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="user.displayName for user in s.allUsers | orderBy"></select>
-      <button class="btn btn-default btn-sm" type="button"
+      <button ng-if="s.context.userCan.addUsersToContext" class="btn btn-default btn-sm" type="button"
               x-user-search-chooser
               x-title="'Select Contacts'"
               x-project="s.context"
@@ -53,7 +53,11 @@
 		</div>
 		<div class="form-group manage-permission no-margin">
 			<label class="control-label">Manage Users for Role</label>
-			<tmpl-add-user-to-context class="new-role-btn" context="s.context" role="s.defaultRole" ng-if="s.context._id !== 'application'"></tmpl-add-user-to-context>
+      <button ng-if="s.context.userCan.addUsersToContext" class="btn btn-default btn-sm" type="button"
+              x-user-search-chooser
+              x-title="'Select Contacts'"
+              x-project="s.context"
+              x-destination="contacts"><span class="glyphicon glyphicon-plus"></span><span>Add User</span></button>
 		</div>
 		<div class="panel panel-default">
 			<ul class="list-group">
