--- a/modules/templates/client/views/template-document-editor.html
+++ b/modules/templates/client/views/template-document-editor.html
@@ -34,7 +34,7 @@
                         <small>{{file.isPublished}}</small>
                         <small>V.{{ file.documentVersion }}</small>
                         <small> &nbsp;|&nbsp; {{ file.dateUpdated | amDateFormat:'MMMM Do YYYY'}}</small>
-                        <span class="label label-success" ng-if="file.isPublished">Published</span>
+                        <span class="label label-success" ng-if="file.isPublished && authentication.user">Published</span>
                     </span>
                 </span>
                 <span class="actions">
