--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -1,10 +1,11 @@
 
-<form class="view-form" name="organizationForm" ng-submit="save(organizationForm.$valid)" novalidate>
+<form class="view-form" name="organizationForm" novalidate>
 	<div class="view-title-container flex-row">
 		<h1>Add/Edit Organization <span ng-if="org.name">&nbsp; &rsaquo; &nbsp;{{ org.name }}</span></h1>
 		<div class="actions">
 			<button class="btn btn-default btn-sm" ui-sref="admin.organization.list">Cancel</button>
-			<button class="btn btn-primary btn-sm" type="submit">Save</button>
+			<button class="btn btn-danger btn-sm" ng-click="deleteOrg()" type="button"><span class="glyphicon glyphicon-remove"></span><span>Delete</span></button>
+			<button class="btn btn-primary btn-sm" ng-click="save(organizationForm.$valid)" type="button">Save</button>
 		</div>
 	</div>
 	
@@ -100,7 +101,7 @@
 		<div class="form-footer clearfix">
 			<div class="pull-right">
 				<button class="btn btn-default btn-sm" ui-sref="admin.organization.list">Cancel</button>
-				<button class="btn btn-primary btn-sm" type="submit">Save</button>
+				<button class="btn btn-primary btn-sm" ng-click="save(organizationForm.$valid)" type="button">Save</button>
 			</div>
 		</div>
 
