Fixed a small issue in the artifact-list-chooser.html
- overlapping checkboxes over the name column

--- a/modules/artifacts/client/views/artifact-list-chooser.html
+++ b/modules/artifacts/client/views/artifact-list-chooser.html
@@ -7,7 +7,7 @@
   <section class="panel panel-default no-margin">
     <table class="table table-scroll add-vc-table" ng-table="s.tableParams" show-filter="true">
       <tr ng-repeat="t in s.items">
-        <td class="name-col"
+        <td class="name-col select"
             header-class="'name-col'"
             filter="{'name':'text'}"
             data-title="'Name'">
