--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -57,32 +57,6 @@
 		<fieldset>
 			<legend>Mailing Address</legend>
 			<div class="row">
-				<div class="col-sm-6 col-md-3">
-					<div class="form-group">
-						<label for="city" class="control-label">City</label>
-						<input class="form-control" id="city" type="text" ng-model="org.city">
-					</div>
-				</div>    
-				<div class="col-sm-6 col-md-3">
-					<div class="form-group">
-						<label for="province" class="control-label">Province</label>
-						<input class="form-control" id="province" type="text" ng-model="org.province">
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<div class="form-group">
-						<label for="country" class="control-label">Country</label>
-						<input class="form-control" id="country" type="text" ng-model="org.country">
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<div class="form-group">
-						<label for="postal" class="control-label">Postal Code</label>
-						<input class="form-control" id="postal" type="text" ng-model="org.postal">
-					</div>
-				</div>
-			</div>
-			<div class="row">
 				<div class="col-sm-6">
 					<div class="form-group">
 						<label for="address1" class="control-label">Street Address 1</label>
@@ -96,11 +70,38 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-sm-6 col-md-3">
+					<div class="form-group">
+						<label for="city" class="control-label">City</label>
+						<input class="form-control" id="city" type="text" ng-model="org.city">
+					</div>
+				</div>    
+				<div class="col-sm-6 col-md-3">
+					<div class="form-group">
+						<label for="province" class="control-label">Province/State</label>
+						<input class="form-control" id="province" type="text" ng-model="org.province">
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<div class="form-group">
+						<label for="country" class="control-label">Country</label>
+						<input class="form-control" id="country" type="text" ng-model="org.country">
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<div class="form-group">
+						<label for="postal" class="control-label">Postal/Zip Code</label>
+						<input class="form-control" id="postal" type="text" ng-model="org.postal">
+					</div>
+				</div>
+			</div>
 		</fieldset>
 
 		<div class="form-footer clearfix">
 			<div class="pull-right">
 				<button class="btn btn-default btn-sm" ui-sref="admin.organization.list">Cancel</button>
+				<button class="btn btn-danger btn-sm" ng-click="deleteOrg()" type="button"><span class="glyphicon glyphicon-remove"></span><span>Delete</span></button>
 				<button class="btn btn-primary btn-sm" ng-click="save(organizationForm.$valid)" type="button">Save</button>
 			</div>
 		</div>
