--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -10,27 +10,24 @@
 			<span class="glyphicon glyphicon-plus"></span>
 			<span>Add Organization</span>
 		</a>
-		<div class="pull-right">
-			<show-filter x-toggle-filter="toggleFilter"></show-filter>
-		</div>
 	</div>
 	<section class="panel panel-default">
-		<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
+		<table ng-table="tableParams" x-show-filter="true" class="table table-striped table-hover">
 			<tr ng-repeat="o in $data" ui-sref="admin.organization.detail({orgId:o._id})" class="clickable">
 				<td data-title="'Name'"
 					filter="{'name':'text'}"
 					sortable="'name'">{{o.name}}</td>
-				<td data-title="'DBA'"
+				<td data-title="'Display Name'"
 					filter="{'company':'text'}"
 					sortable="'company'">{{o.company}}</td>
+				<td data-title="'Type'"
+					filter="{'companyType':'text'}"
+					sortable="'company'">{{o.companyType}}</td>
 				<td data-title="'Company Legal'"
 					filter="{'companyLegal':'text'}"
 					sortable="'companyLegal'">{{o.companyLegal}}</td>
-				<td data-title="'Location'"
-					filter="{'registeredIn':'text'}"
-					sortable="'registeredIn'">{{o.registeredIn}}</td>
 				<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-					<a class="btn btn-link btn-sm" title="Edit Organization" ng-if="application.userCan.createOrganization" ng-click="$event.stopPropagation()" ui-sref="admin.organization.edit({orgId:o._id})">
+					<a class="btn btn-default btn-sm" title="Edit Organization" ng-if="application.userCan.createOrganization" ng-click="$event.stopPropagation()" ui-sref="admin.organization.edit({orgId:o._id})">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</a>
 				</td>
