ESM-592 - Edit Organizations Details Fields
- Changing 'Doing Business As' to 'Display Name' for consistency
- Displaying the organization name in lieu of a missing 'Display Name' field for an Organization

--- a/modules/organizations/client/views/organization-edit.html
+++ b/modules/organizations/client/views/organization-edit.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="form-group">
-						<label for="company" class="control-label">Doing Business As</label>
+						<label for="company" class="control-label">Display Name<em>(Doing Business As)</em></label>
 						<input class="form-control" id="company" type="text" ng-model="org.company">
 					</div>
 				</div>
