--- a/modules/organizations/client/views/organization-view.html
+++ b/modules/organizations/client/views/organization-view.html
@@ -44,7 +44,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="form-group">
-								<label for="company" class="control-label">Display Name</label>
+								<label for="company" class="control-label">Display Name<em>(Doing Business As)</em></label>
 								<p class="form-control-static">{{ org.company }}</p>
 							</div>
 						</div>
